# CatawbaApp

./: README.md  app.py  config.yaml  pyproject.toml  requirements.txt
assets/: custom.css
catadata/data/: 100m Riparian Zone.geojson  100m Riparian Zone.shp  100m Riparian Zone.shx  Cata_data.csv  cata_conservation.csv  data.py
temp/: Cata_data.csv  Cata_data_old.csv  cata_conservation.csv  cata_conservation_old.csv
