[tool.poetry]
name = "catadata"
version = "0.1.0"
description = ""
authors = ["Jayden Roberts, Taylor Roberts"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
folium = "^0.13.0"
branca = "^0.6.0"
numpy = "^1.23.5"
gunicorn = "^20.1.0"
dash = "^2.7.0"
geopandas = "^0.12.1"
dash-bootstrap-components = "^1.2.1"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
jupyter = "^1.0.0"
notebook = "^6.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
